# research

./: .gitignore  docker-compose.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20250611_0001_create_users_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: research.py  users.py
backend/app/core/: config.py  database.py  logging.py
backend/app/models/: user.py
backend/app/repositories/: base.py  user_repo.py
backend/app/schemas/: research_papers.py  user.py
backend/app/services/: research_service.py  user_service.py
backend/app/services/research_sources/: arxiv.py  base.py  dblp.py  openalex.py  semanticscholar.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: index.css  main.tsx  vite-env.d.ts
frontend/src/components/cards/: ArticleCard.tsx  ProjectCard.tsx  (+3 more)
frontend/src/config/: env.ts
frontend/src/data/: mockData.ts
frontend/src/layouts/: OnboardingLayout.tsx  ProtectedLayout.tsx  PublicLayout.tsx
frontend/src/lib/: axios.ts  mindMap.ts  mindMapLayout.ts  onboarding.ts  sourcePaths.ts  theme.ts
frontend/src/pages/: AllProjectsPage.tsx  DashboardPage.tsx  HubPage.tsx  LoginPage.tsx  NewProjectPage.tsx  NotFoundPage.tsx  OnboardingPage.tsx  ProfilePage.tsx  RecentSearchesPage.tsx
frontend/src/providers/: AppProvider.tsx  StarredProvider.tsx
frontend/src/routes/: index.tsx
frontend/src/types/: index.ts
(+25 files in other folders)
